port spacing fix disables ports

--- a/scss/components/valueinput.scss
+++ b/scss/components/valueinput.scss
@@ -17,6 +17,7 @@
 
     .numberinput,.numberinput-value
     {
+        overflow: hidden;
         position: relative;
         font-family: monospace;
         font-size: 14px;
@@ -35,6 +36,7 @@
         padding-top:1px;
         height:18px;
         padding-left: 5px;
+        padding-right: 5px;
         color:$color-c2;
         border-radius: 2px;
         user-select: none;
